# ArchPilot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 1_OVERVIEW.md  2_SCHEMA.md  3_USER_GUIDE.md  4_GROUNDING.md  5_DRAWIO.md  6_ARCHITECTURE.md  7_SPEC.md  8_ANALYSIS_REPORT.md  ARCHITECTURE.md  ONTOLOGY.md  SPEC.md  USER_GUIDE.md
examples/: hybrid_cloud_government.yaml  hybrid_cloud_hospital.yaml  hybrid_cloud_manufacturing.yaml  large_scale_fintech.yaml  large_scale_logistics.yaml  large_scale_streaming_platform.yaml  legacy_bank.yaml  legacy_ecommerce.yaml
src/archpilot/: __init__.py  config.py
src/archpilot/cli/: _utils.py  cmd_analyze.py  cmd_drawio.py  cmd_ingest.py  cmd_init.py  cmd_modernize.py  cmd_serve.py  main.py
src/archpilot/core/: diff.py  drawio_config.py  models.py  parser.py  tech_ontology.py  transformation_patterns.py
src/archpilot/llm/: analyzer.py  client.py  grounding.py  modernizer.py  parser_agent.py  prompts.py  utils.py
src/archpilot/llm/prompts/: __init__.py  analyze.py  ingest.py  modernize.py  shared.py
src/archpilot/renderers/: __init__.py  base.py  drawio.py  drawio_library.py  drawio_parser.py  mermaid.py  mingrammer.py
src/archpilot/ui/: helpers.py  schemas.py  server.py  session.py  stream_utils.py
src/archpilot/ui/routers/: analyze.py  ingest.py  modernize.py
src/archpilot/ui/templates/: app.html.j2  slides.html.j2
tests/: conftest.py  test_cmd_drawio.py  test_diff.py  test_drawio_config.py  test_drawio_parser.py  test_grounding.py  test_helpers.py  test_llm_utils.py  test_mingrammer.py  test_modernizer.py  test_parser.py  test_renderers.py  test_routers_analyze.py  test_routers_modernize.py  test_transformation_patterns.py  test_ui_server.py
