[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archpilot"
version = "0.2.0"
description = "레거시 시스템 구성을 다이어그램으로 코드화하고 AI 기반으로 현대화 아키텍처를 설계·시각화하는 CLI 도구"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sungwoo Kim", email = "sungwoo.kim@gmail.com"},
]
maintainers = [
    {name = "Sungwoo Kim", email = "sungwoo.kim@gmail.com"},
]
keywords = [
    "architecture", "diagram", "legacy", "modernization",
    "llm", "openai", "mermaid", "drawio", "diagrams",
    "cli", "fastapi", "reveal.js", "ai", "infrastructure",
    "system-design", "migration", "cloud", "microservices",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Natural Language :: Korean",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "openai>=1.30,<2",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pyyaml>=6.0",
    "diagrams>=0.23",
    "jinja2>=3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "tenacity>=8.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/bullpeng72/ArchPilot"
Repository = "https://github.com/bullpeng72/ArchPilot"
"Bug Tracker" = "https://github.com/bullpeng72/ArchPilot/issues"
Changelog = "https://github.com/bullpeng72/ArchPilot/blob/main/README.md"

[project.scripts]
archpilot = "archpilot.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/archpilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
